<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_screen_width"
    android:layout_height="500dp"
    android:background="@drawable/border_main">

    <LinearLayout
        android:id="@+id/selectLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="@string/select_table"
            android:textColor="@color/black"
            android:textSize="@dimen/screen_label_text_font" />

        <Spinner
            android:id="@+id/tableSpinner"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_weight="8"
            android:gravity="center"
            android:background="@drawable/border_white"
            android:layout_marginRight="90px"
            android:layout_marginLeft="50dp"
            android:textColor="@color/black"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:prompt="@string/spinner_title"
            android:textSize="@dimen/screen_label_text_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/selectLayout"
        android:id="@+id/csv_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="50dp"
            android:textSize="@dimen/screen_label_text_font"
            android:text="@string/csv_date_select"
            android:gravity="center"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/csv_start_date"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/lbYen"
            android:gravity="center|right"
            android:paddingLeft="10dp"
            android:lines="1"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:inputType="number"
            android:background="@drawable/border_white"
            android:imeOptions="actionSend"
            tools:ignore="Suspicious0dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/screen_label_text_font"
            android:text="~"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/csv_end_date"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/lbYen"
            android:gravity="center|right"
            android:paddingLeft="10dp"
            android:lines="1"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:inputType="number"
            android:background="@drawable/border_white"
            android:imeOptions="actionSend"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/csv_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:visibility="invisible"
            android:layout_marginLeft="50dp"
            android:textColor="@color/black"
            android:text="@string/btn_by_end_day"
            android:background="@drawable/normal_button"
            android:textSize="@dimen/screen_btn_text_font" />

        <Button
            android:id="@+id/btn_csv_export"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/predateLayout"
            android:background="@drawable/normal_button"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:text="@string/btn_csv_export"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
