<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/dialog_screen_width"
    android:layout_height="@dimen/dialog_screen_height"
    android:background="@drawable/border_main">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/cashLb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/btn_device_setting"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/ticketingLayout"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/cashLb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/screen_label_text_font"
                android:text="@string/lb_device_name"
                android:gravity="left|center"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true">
                </LinearLayout>

                <EditText
                    android:id="@+id/deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:lines="1"
                    android:background="@drawable/border_white"
                    android:gravity="center|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/screen_label_text_font"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/preMoneyLayout"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/ticketingLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/screen_label_text_font"
                android:text="@string/lb_device_num"
                android:gravity="left|center"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true">
                </LinearLayout>

                <EditText
                    android:id="@+id/deviceNum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/border_white"
                    android:lines="1"
                    android:gravity="center|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/screen_label_text_font"
                    android:inputType="number"
                    android:imeOptions="actionSend"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/devicePlaceLayout"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/preMoneyLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/screen_label_text_font"
                android:text="@string/lb_device_place"
                android:gravity="left|center"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <Spinner
                    android:id="@+id/devicePlace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/border_white"
                    android:gravity="center|right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/screen_label_text_font"
                    android:imeOptions="actionSend"/>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/registryBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@+id/devicePlaceLayout"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:background="@drawable/normal_button"
            android:textSize="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/btn_registry"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/separater1"
            android:background="@color/SEPARATER_BCOLOR"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:paddingRight="16dp"
            android:lines="1"
            android:textSize="@dimen/status_text_font" />

    </LinearLayout>

</RelativeLayout>